--- a/src/org/oop/view/segreteria/FormImmatricolazione.form
+++ b/src/org/oop/view/segreteria/FormImmatricolazione.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.segreteria.FormImmatricolazione">
-  <grid id="27dc6" binding="immatricolazionepanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="immatricolazionepanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="40" left="15" bottom="40" right="15"/>
     <constraints>
-      <xy x="20" y="20" width="808" height="537"/>
+      <xy x="20" y="20" width="900" height="537"/>
     </constraints>
     <properties>
       <background color="-2171170"/>
@@ -12,14 +12,14 @@
     <children>
       <hspacer id="79f63">
         <constraints>
-          <grid row="1" column="2" row-span="2" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="2" row-span="4" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
       </hspacer>
       <hspacer id="4036c">
         <constraints>
-          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="4" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -34,7 +34,7 @@
           <text value="Compila il form per stampare il modulo di immatricolazione"/>
         </properties>
       </component>
-      <grid id="beda3" layout-manager="GridLayoutManager" row-count="12" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="beda3" layout-manager="GridLayoutManager" row-count="11" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -114,7 +114,7 @@
               <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Diploma:"/>
+              <text value="Scuola di provenienza:"/>
             </properties>
           </component>
           <component id="678e3" class="javax.swing.JLabel" binding="votolabel">
@@ -146,7 +146,7 @@
               <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Anno di conseguimento 1:"/>
+              <text value="Anno Scolastico*:"/>
             </properties>
           </component>
           <component id="6eea2" class="javax.swing.JFormattedTextField" binding="luogonascita">
@@ -204,7 +204,7 @@
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Provincia"/>
+              <text value="Provincia:"/>
             </properties>
           </component>
           <component id="81684" class="javax.swing.JFormattedTextField" binding="provincia">
@@ -215,28 +215,12 @@
             </constraints>
             <properties/>
           </component>
-          <component id="371ef" class="javax.swing.JLabel" binding="annoConseguimento2Label">
-            <constraints>
-              <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Anno di Conseguimento 2:"/>
-            </properties>
-          </component>
-          <component id="b3bbc" class="javax.swing.JFormattedTextField" binding="annoConseguimento2" custom-create="true">
-            <constraints>
-              <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="250" height="20"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
         </children>
       </grid>
       <grid id="4340" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-2171170"/>
@@ -270,6 +254,22 @@
           </component>
         </children>
       </grid>
+      <component id="819" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="* Impostare solo la prima parte dell'anno scolastico."/>
+        </properties>
+      </component>
+      <component id="e92bd" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value=" Esempio: 2011 al posto di 2011/2012"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
